--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ body{
 }
 
 .home {
-  min-height: 100vh;
+  min-height: 80vh;
   width: 100vw;
   background-image: url(../images/img1.jpg);
   background-size: cover;
@@ -1423,4 +1423,7 @@ body{
     rgba(255, 255, 255, 1) 0%,
     rgba(241, 247, 254, 1) 100%
   );
+}
+::-webkit-scrollbar {
+  display: none;
 }
