--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ body{
 }
 
 .home {
-  min-height: 80vh;
+  min-height: 100vh;
   width: 100vw;
   background-image: url(../images/img1.jpg);
   background-size: cover;
@@ -380,6 +380,9 @@ body{
 @media (max-width: 700px) {
   .counters .container {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .home {
+    min-height: 80vh;
   }
 
   .counters .container > div:nth-of-type(1),
@@ -1100,6 +1103,9 @@ body{
 @media (max-width: 1000px) {
   html {
     font-size: 50%;
+  }
+  .home {
+    min-height: 80vh;
   }
 
   .header .logo img {
