--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
   font-size: 62.5%;
 }
 body{
-  overflow-x: hidden;                /*Edit-1*/
+  overflow-x: hidden;                
 }
 
 .heading,
